Se ha comenzado la creacion de las opiniones.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Relacionados"></activity>
+        <activity android:name=".AnhadirOpinion"></activity>
+        <activity android:name=".Relacionados" />
         <activity android:name=".DetallesJuego" />
         <activity android:name=".AnhadirJuego" />
         <activity android:name=".MainActivity">
