--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.android.material:material:1.0.0'
-    compile 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
+    implementation 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
 }
