Se han añadido los mapas, falta añadir las funcionalidades.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 }
