--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="com.google.android.providers."/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.google.android.providers." />
 
     <application
         android:allowBackup="true"
@@ -15,13 +15,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".ListaOpiniones"></activity>
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyD9flnxFwr66BZaKXT21YkdSt0Did4Vh-0"/>
-        <activity android:name=".Mapa"></activity>
+            android:value="AIzaSyD9flnxFwr66BZaKXT21YkdSt0Did4Vh-0" />
+
+        <activity android:name=".Mapa" />
         <activity android:name=".AnhadirOpinion" />
         <activity android:name=".Relacionados" />
         <activity android:name=".DetallesJuego" />
