Se ha comenzado el menú de preferencias pero no funciona. Se muestra la ubicación actual en el mapa.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,11 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
+    implementation 'androidx.preference:preference:1.1.0-rc01'
+
+    implementation 'androidx.cardview:cardview:1.0.0'
+
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+
 }
