--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
+    implementation 'com.google.maps:google-maps-services:0.2.5'
+    implementation 'org.slf4j:slf4j-simple:1.7.25'
+
 }
